--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -1,3 +1,23 @@
-body{
-    
+#infoForm{
+    display: flex;
+    justify-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+header{
+    display: flex;
+    justify-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #b22222;
+}
+
+#inputSection{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+h1{
+    font-size: 50px;
+    margin: 0;
+    padding: 0;
 }
