--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -4,6 +4,27 @@
     font-family: 'Gill Sans', 'Gill Sans MT', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+#waitlist{
+    display: flex;
+    justify-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border: solid;
+    background-color: #a23451;
+    width: 200px;
+}
+
+#Me{
+    background-color: ivory;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+#others{
+    background-color: ivory;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 header{
     display: flex;
     justify-content: center;
